--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>歐米伽訓練遊戲（V9.3 — 按鈕版）</title>
+<title>歐米伽訓練遊戲（V9.4 — 題庫修正）</title>
 <style>
   body{font-family:Arial,Helvetica,sans-serif;background:#f5f6fa;color:#222;margin:0;padding:20px;text-align:center}
   .container{max-width:760px;margin:0 auto;background:#fff;padding:20px;border-radius:10px;box-shadow:0 6px 18px rgba(0,0,0,.06)}
@@ -35,7 +35,7 @@
 </head>
 <body>
 <div class="container">
-  <h1>歐米伽訓練遊戲（V9.3）</h1>
+  <h1>歐米伽訓練遊戲（V9.4）</h1>
   <p class="lead">每輪 5 題 • 點擊 A 或 B 按鈕答題 • 題庫 100 題</p>
 
   <div id="questionBox">
@@ -62,7 +62,7 @@
 </div>
 
 <script>
-/* V9.3 — 全題庫 100 題（按鈕版本） */
+/* V9.4 — 題庫修正 */
 const allQuestions = [
   {q:"哪個系列以登月故事聞名？\nA. 海馬  B. 超霸", a:"B"},
   {q:"潛水性能最強的系列是哪個？\nA. 超霸  B. 海馬", a:"B"},
@@ -158,8 +158,9 @@ const allQuestions = [
   {q:"Omega 的英文常見念法？\nA. Oh-mega  B. O-mega", a:"A"},
   {q:"某些海馬型號廣受潛水員喜愛，主要因？\nA. 高防水與耐用  B. 僅外觀", a:"A"},
   {q:"星座 Globemaster 名稱來源與何相關？\nA. 天文台  B. 潛水", a:"A"},
-  {q:"若題庫耗盡系統行為為？\nA. 自動重新洗牌並繼續  B. 停止出題", a:"A"},
-  {q:"若要只練錯題，應開發哪功能？\nA. 錯題回放  B. 隨機出題", a:"A"}
+  // 以下為新增的題目
+  {q:"Snoopy Award 超霸錶是為了紀念哪次任務？\nA. 阿波羅13號  B. 阿波羅11號", a:"A"},
+  {q:"Omega 是哪個集團旗下的品牌？\nA. Swatch Group  B. LVMH", a:"A"}
 ];
 
 // ---------- 狀態 -----------
