Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
 <div class="container">
   <h1>歐米伽訓練遊戲（V9.4）</h1>
-  <p class="lead">每輪 5 題 • 點擊 A 或 B 按鈕答題 • 題庫 100 題</p>
+  <p class="lead">每輪 5 題 • 點擊 A 或 B 按鈕答題 </p>
 
   <div id="questionBox">
     <div id="qmeta">按「開始」抽題</div>
@@ -307,3 +307,4 @@ initializeGame();
 </script>
 </body>
 </html>
+
